--- a/TerminalFragmentDesigner/Pages/Index.razor
+++ b/TerminalFragmentDesigner/Pages/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<h3 class="font-medium leading-tight text-2xl mt-0 mb-2">Links &amp; Resources</h3>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<ul class="list-disc">
+    <li><a target="_blank" href="https://apps.microsoft.com/store/detail/windows-terminal/9N0DX20HK701">Download Windows terminal</a></li>
+    <li><a target="_blank" href="https://learn.microsoft.com/en-us/windows/terminal/json-fragment-extensions">Terminal fragment extensions</a></li>
+    <li><a target="_blank" href="https://learn.microsoft.com/en-us/windows/terminal/customize-settings/profile-general">Terminal profile settings documentation</a></li>
+</ul>
