--- a/TerminalFragmentDesigner/Shared/MainLayout.razor
+++ b/TerminalFragmentDesigner/Shared/MainLayout.razor
@@ -1,17 +1,36 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+<div class="min-h-full">
+    <nav class="bg-gray-800">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+            <div class="flex h-16 items-center justify-between">
+                <div class="flex items-center">
+                    <div class="flex-shrink-0">
+                        <img class="h-8 w-8" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="Your Company">
+                    </div>
+                    <div class="hidden md:block">
+                        <div class="ml-10 flex items-baseline space-x-4">
+                            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+                            <NavLink class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page" href="Counter">Counter</NavLink>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </nav>
 
-        <article class="content px-4">
+    <header class="bg-white shadow">
+        <div class="mx-auto max-w-7xl py-6 px-4 sm:px-6 lg:px-8">
+            <h1 class="text-3xl font-bold tracking-tight text-gray-900">Windows Terminal Fragment Designer</h1>
+        </div>
+    </header>
+
+    <main class="grid grid-cols-3 gap-4">
+        <div class="col-span-2 mx-8">
+            <TerminalWindow/>
+        </div>
+        <div>
             @Body
-        </article>
+        </div>
     </main>
 </div>
