--- a/TerminalFragmentDesigner/Shared/TerminalWindow.razor
+++ b/TerminalFragmentDesigner/Shared/TerminalWindow.razor
@@ -1,43 +1,4 @@
-﻿<style>
-    .terminal-preview {
-        width: 700px;
-        height: 450px;
-        box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
-        background: black;
-    }
-    .terminal-header {
-        background: #dadada;
-    }
-
-    .terminal-header-tabtitle {
-        width: 240px;
-        display: inline-block;
-        margin-left: 10px;
-        padding: 5px;
-        border-radius: 8px 8px 0 0;
-        background: #d0d0d0;
-    }
-
-    .terminal-header-windowcontrols {
-        display: inline-block;
-        position: relative;
-        left: 250px;
-    }
-
-    .terminal-header-button {
-        width: 24px;
-        height: 24px;
-        display: inline-block;
-        color: black;
-        margin: 5px;
-    }
-
-    .terminal-content {
-        color: #8b8b8b;
-        padding: 8px;
-    }
-</style>
-<div class="terminal-preview">
+﻿<div class="terminal-preview">
     <div class="terminal-header">
         <div class="terminal-header-tabtitle">
             <svg style="width:24px;height:24px; display: inline-block;" viewBox="0 0 24 24">
@@ -67,11 +28,24 @@
         </div>
     </div>
     <div class="terminal-content">
-        <p>PS C:\Windows&gt;</p>
-
+        <p>PS C:\Windows&gt;<span class="terminal-content-prompt">|</span> </p>
+        <p>Black</p>
+        <p>Blue</p>
+        <p>BrightBlack</p>
+        <p>BrightBlue</p>
+        <p>BrightCyan</p>
+        <p>BrightGreen</p>
+        <p>BrightPurple</p>
+        <p>BrightRed</p>
+        <p>BrightWhite</p>
+        <p>BrightYellow</p>
+        <p>Cyan</p>
+        <p>Green</p>
+        <p>Purple</p>
+        <p>Red</p>
+        <p>White</p>
+        <p>Yellow</p>
     </div>
 </div>
 
-@code {
 
-}
