--- a/TerminalFragmentDesigner/wwwroot/css/app.css
+++ b/TerminalFragmentDesigner/wwwroot/css/app.css
@@ -62,3 +62,70 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+@keyframes pulse {
+    0% {
+        opacity: 0;
+    }
+
+    49% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    99% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+.terminal-preview {
+    width: 800px;
+    height: 450px;
+    box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.25);
+    background: black;
+}
+
+.terminal-header {
+    background: #dadada;
+}
+
+.terminal-header-tabtitle {
+    width: 240px;
+    display: inline-block;
+    margin-left: 10px;
+    padding: 5px;
+    border-radius: 8px 8px 0 0;
+    background: #d0d0d0;
+}
+
+.terminal-header-windowcontrols {
+    display: inline-block;
+    position: relative;
+    left: 350px;
+}
+
+.terminal-header-button {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    color: black;
+    margin: 5px;
+}
+
+.terminal-content {
+    color: #8b8b8b;
+    padding: 8px;
+    overflow: auto;
+    font-family: "Consolas";
+}
+
+.terminal-content-prompt {
+    animation: pulse 1s infinite;
+}
