--- a/TerminalFragmentDesigner/Shared/TerminalWindow.razor
+++ b/TerminalFragmentDesigner/Shared/TerminalWindow.razor
@@ -29,22 +29,22 @@
     </div>
     <div class="terminal-content">
         <p>PS C:\Windows&gt;<span class="terminal-content-prompt">|</span> </p>
-        <p>Black</p>
-        <p>Blue</p>
-        <p>BrightBlack</p>
-        <p>BrightBlue</p>
-        <p>BrightCyan</p>
-        <p>BrightGreen</p>
-        <p>BrightPurple</p>
-        <p>BrightRed</p>
-        <p>BrightWhite</p>
-        <p>BrightYellow</p>
-        <p>Cyan</p>
-        <p>Green</p>
-        <p>Purple</p>
-        <p>Red</p>
-        <p>White</p>
-        <p>Yellow</p>
+        <span style="background: @Theme.Black.ToRgbaString();">Black</span>
+        <span style="background: @Theme.Blue.ToRgbaString();">Blue</span>
+        <span style="background: @Theme.BrightBlack.ToRgbaString();">BrightBlack</span>
+        <span style="background: @Theme.BrightBlue.ToRgbaString();">BrightBlue</span>
+        <span style="background: @Theme.BrightCyan.ToRgbaString();">BrightCyan</span>
+        <span style="background: @Theme.BrightGreen.ToRgbaString();">BrightGreen</span>
+        <span style="background: @Theme.BrightPurple.ToRgbaString();">BrightPurple</span>
+        <span style="background: @Theme.BrightRed.ToRgbaString();">BrightRed</span>
+        <span style="background: @Theme.BrightWhite.ToRgbaString();">BrightWhite</span>
+        <span style="background: @Theme.BrightYellow.ToRgbaString();">BrightYellow</span>
+        <span style="background: @Theme.Cyan.ToRgbaString();">Cyan</span>
+        <span style="background: @Theme.Green.ToRgbaString();">Green</span>
+        <span style="background: @Theme.Purple.ToRgbaString();">Purple</span>
+        <span style="background: @Theme.Red.ToRgbaString();">Red</span>
+        <span style="background: @Theme.White.ToRgbaString();">White</span>
+        <span style="background: @Theme.Yellow.ToRgbaString();">Yellow</span>
     </div>
 </div>
 
